[tool.poetry]
name = "mercs"
version = "0.0.41"
description = "MERCS: Multi-Directional Ensembles of Regression and Classification treeS"
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>"]

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = "^1.19.1"
shap = "^0.35.0"
joblib = "^0.16.0"
scikit-learn = "^0.23.1"
lightgbm = "^2.3.1"
catboost = "^0.23.2"
networkx = "^2.4"
dask = "^2.21.0"
decision-tree-morfist = "^0.1.4"

[tool.poetry.dev-dependencies]
graphviz = "^0.14.1"
ipython = "^7.16.1"
pandas = "^1.0.5"
pydot = "^1.4.1"
pytest = "^5.4.3"
setuptools = "^49.2.0"
