[tool.poetry]
name = "mercs-mixed"
version = "0.0.43"
description = "MERCS: Multi-Directional Ensembles of Regression and Classification treeS"
authors = ["Andrés Reverón Molina <andres@reveronmolina.me>", "Elia vw <elia.vw@gmail.com>"]
license = "MIT"
repository = "https://github.com/systemallica/mercs"
readme = "README.md"
classifiers = [
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "mercs" },
]

[tool.poetry.dependencies]
python = "^3.8.0"
catboost = "^0.23.2"
decision-tree-morfist = "^0.1.5"
ipython = "^7.16.1"
joblib = "^0.16.0"
lightgbm = "^2.3.1"
networkx = "^2.4"
numpy = "^1.19.1"
pydot = "^1.4.1"
scikit-learn = "^0.23.1"
shap = "^0.35.0"

[tool.poetry.dev-dependencies]
graphviz = "^0.14.1"
ipython = "^7.16.1"
jupyterlab = "^2.2.0"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.0"
pandas = "^1.0.5"
pydot = "^1.4.1"
pytest = "^5.4.3"
setuptools = "^49.2.0"
