[metadata]
name = mercs
version = 0.0.38
description = MERCS: Multi-Directional Ensembles of Regression and Classification treeS
author = Andrés Reverón Molina
author-email = andres@reveronmolina.me
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/systemallica/mercs
project-urls = 
	Documentation = https://github.com/systemallica/mercs
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	= src
install_requires = 
	numpy
	scipy
	pandas
	networkx
	scikit-learn
	dask
	toolz
	tornado
	pydot
	ipython
	shap
python_requires = 
	>= 3.7

[options.packages.find]
where = 
	src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest

[test]
extras = True

[tool:pytest]
addopts = 
	--verbose
norecursedirs = 
	dist
	build
testpaths = 
	tests

[aliases]
dists = bdist_wheel

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

