[metadata]
name = mercs
version = 0.0.41
description = MERCS: Multi-Directional Ensembles of Regression and Classification treeS
author = 'Elia vw, Andrés Reverón Molina'
author-email = 'elia.vw@gmail.com, andres@reveronmolina.me'
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/eliavw/mercs
project-urls = 
	Documentation = https://github.com/eliavw/mercs
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
	= src
install_requires = 
	numpy
	scipy
	pandas
	networkx
	scikit-learn
	dask
	toolz
	tornado
	pydot
	ipython
	shap
	decision-tree-morfist
python_requires = 
	>= 3.7

[options.packages.find]
where = 
	src
exclude = 
	tests

[options.extras_require]
testing = 
	pytest

[test]
extras = True

[tool:pytest]
addopts = 
	--verbose
norecursedirs = 
	dist
	build
testpaths = 
	tests

[aliases]
dists = bdist_wheel

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

